--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@
 /frontend/libpeerconnection.log
 /frontendtestem.log
 /frontend/typings
+/frontend/package-lock.json
 
 # Backend
 /backend/node_modules
+/backend/package-lock.json
