anidacion en creacion de cines con peliculas cc

--- a/.gitignore
+++ b/.gitignore
@@ -17,4 +17,5 @@
 # Backend
 /backend/node_modules
 /backend/package-lock.json
-/backend/uploads
+/backend/uploads/*/*.jpeg
+/backend/uploads/*/*.jpg
