--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
+    "@angular/youtube-player": "^14.2.6",
     "ngx-cookie-service": "^14.0.1",
     "primeflex": "^3.2.1",
     "primeicons": "^6.0.1",
