hot changes para produccion

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -60,13 +60,13 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1mb"
+                  "maximumWarning": "5gb",
+                  "maximumError": "10gb"
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "2kb",
-                  "maximumError": "4kb"
+                  "maximumWarning": "5gb",
+                  "maximumError": "10gb"
                 }
               ],
               "fileReplacements": [
