--- a/backend/package.json
+++ b/backend/package.json
@@ -16,10 +16,12 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "fs": "^0.0.1-security",
+    "html-pdf": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.8.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
